# milena

./: .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  hs-kafka.cabal  kafkah.cabal  milena.cabal  package.yaml  stack-cabal-config  stack.yaml
Network/: Examples.hs  Kafka.hs
Network/Kafka/: Consumer.hs  Group.hs  Producer.hs  Protocol.hs
Network/Kafka/Group/: Consumer.hs
Network/Kafka/Group/Consumer/: Protocol.hs
test/: Main.hs  tests.hs
