name:                milena

-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            A Kafka client for Haskell.
description:         Kafka client for Haskell
license:             BSD3
license-file:        LICENSE
author:              Tyler Holien
maintainer:          tyler.holien@gmail.com
copyright:           2014, Tyler Holien
category:            Network
build-type:          Simple
stability:           alpha
cabal-version:       >=1.10

library
  default-language: Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Network.Kafka,
                       Network.Kafka.Protocol
  build-depends:       base       >= 4.7   && <5,
                       cereal     >=0.4      && <0.5,
                       bytestring >=0.10     && <0.12,
                       network    >=2.4      && <2.7,
                       digest     >=0.0.1.0 && <0.0.2

test-suite test
  default-language: Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base,
                       milena,
                       network,
                       QuickCheck,
                       cereal,
                       bytestring,
                       hspec
  hs-source-dirs:      test
  main-is:             tests.hs
  type:                exitcode-stdio-1.0
