name:                milena

-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.4.0.1
synopsis:            A Kafka client for Haskell.
description:
  A Kafka client for Haskell.
  The protocol module is stable (the only changes will be to support changes in the Kafka protocol). The API is functional but subject to change.
license:             BSD3
license-file:        LICENSE
author:              Tyler Holien
maintainer:          tyler.holien@gmail.com
copyright:           2014, Tyler Holien
category:            Network
build-type:          Simple
stability:           alpha
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/tylerholien/milena.git

source-repository this
  type: git
  location: https://github.com/tylerholien/milena.git
  tag: 0.4.0.1

library
  default-language: Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Network.Kafka,
                       Network.Kafka.Protocol,
                       Network.Kafka.Producer
  build-depends:       base          >=4.7      && <5,
                       mtl           >=2.1      && <2.3,
                       cereal        >=0.4      && <0.5,
                       bytestring    >=0.10     && <0.11,
                       network       >=2.4      && <2.7,
                       digest        >=0.0.1.0  && <0.1,
                       containers    >=0.5      && <0.6,
                       random        >=1.0      && <1.2,
                       transformers  >=0.3      && <0.5,
                       lens          >=4.4      && <4.13,
                       resource-pool >=0.2.3.2  && <0.3,
                       lifted-base   >=0.2.3.6  && <0.3,
                       murmur-hash   >=0.1.0.8  && <0.2,
                       semigroups    >=0.16.2.2 && <0.17

test-suite test
  default-language: Haskell2010
  ghc-options:         -Wall -threaded
  build-depends:       base,
                       milena,
                       mtl,
                       network,
                       QuickCheck,
                       bytestring,
                       lens,
                       semigroups,
                       tasty,
                       tasty-hspec,
                       tasty-quickcheck
  hs-source-dirs:      test
  main-is:             tests.hs
  type:                exitcode-stdio-1.0
